// This file is auto-generated by gen-snapshot-tests.js
// Do not edit this file.  To make changes to these snapshot tests:
//   1. edit the markdown documentation files in the package,
//        packages/wonder-blocks-breadcrumb
//   2. Run `yarn run gen-snapshot-tests`.
import React from "react";
import renderer from "react-test-renderer";

// Mock react-dom as jest doesn't like findDOMNode.
jest.mock("react-dom");
import Breadcrumb from "./components/breadcrumb.js";
import BreadcrumbItem from "./components/breadcrumb-item.js";

describe("wonder-blocks-breadcrumb", () => {
    it("example 1", () => {
        const Link = require("@khanacademy/wonder-blocks-link").default;
        const {
            BreadcrumbItem,
        } = require("@khanacademy/wonder-blocks-breadcrumb");

        const example = (
            <Breadcrumb>
                <BreadcrumbItem>
                    <Link href="https://khanacademy.org/">Home</Link>
                </BreadcrumbItem>
                <BreadcrumbItem aria-current="page">
                    Current page
                </BreadcrumbItem>
            </Breadcrumb>
        );
        const tree = renderer.create(example).toJSON();
        expect(tree).toMatchSnapshot();
    });
    it("example 2", () => {
        const Link = require("@khanacademy/wonder-blocks-link").default;
        const {
            BreadcrumbItem,
        } = require("@khanacademy/wonder-blocks-breadcrumb");

        const example = (
            <BreadcrumbItem>
                <Link href="https://khanacademy.org/">Home</Link>
            </BreadcrumbItem>
        );
        const tree = renderer.create(example).toJSON();
        expect(tree).toMatchSnapshot();
    });
    it("example 3", () => {
        const Link = require("@khanacademy/wonder-blocks-link").default;
        const {
            BreadcrumbItem,
        } = require("@khanacademy/wonder-blocks-breadcrumb");

        const example = <BreadcrumbItem>Current page</BreadcrumbItem>;
        const tree = renderer.create(example).toJSON();
        expect(tree).toMatchSnapshot();
    });
});
