// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wonder-blocks-breadcrumb example 1 1`] = `
<nav
  aria-label="Breadcrumb"
>
  <ol
    className=""
    style={
      Object {
        "listStyle": "none",
        "margin": 0,
        "overflow": "hidden",
        "padding": 0,
      }
    }
  >
    <li
      className=""
      style={
        Object {
          "::after": Object {
            "content": "'∙'",
            "display": "inline-block",
            "margin": "0 6",
          },
          ":lastChild": Object {
            "::after": Object {
              "content": "''",
            },
          },
          "display": "inline-block",
          "margin": "0 6",
        }
      }
    >
      <a
        className=""
        href="https://khanacademy.org/"
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "color": "#1865f2",
            "cursor": "pointer",
            "outline": "none",
            "textDecoration": "none",
          }
        }
        tabIndex={0}
      >
        Home
      </a>
    </li>
    <li
      className=""
      style={
        Object {
          "::after": Object {
            "content": "'∙'",
            "display": "inline-block",
            "margin": "0 6",
          },
          ":lastChild": Object {
            "::after": Object {
              "content": "''",
            },
          },
          "display": "inline-block",
          "margin": "0 6",
        }
      }
    >
      Current page
    </li>
  </ol>
</nav>
`;

exports[`wonder-blocks-breadcrumb example 2 1`] = `
<li
  className=""
  style={
    Object {
      "::after": Object {
        "content": "'∙'",
        "display": "inline-block",
        "margin": "0 6",
      },
      ":lastChild": Object {
        "::after": Object {
          "content": "''",
        },
      },
      "display": "inline-block",
      "margin": "0 6",
    }
  }
>
  <a
    className=""
    href="https://khanacademy.org/"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "color": "#1865f2",
        "cursor": "pointer",
        "outline": "none",
        "textDecoration": "none",
      }
    }
    tabIndex={0}
  >
    Home
  </a>
</li>
`;

exports[`wonder-blocks-breadcrumb example 3 1`] = `
<li
  className=""
  style={
    Object {
      "::after": Object {
        "content": "'∙'",
        "display": "inline-block",
        "margin": "0 6",
      },
      ":lastChild": Object {
        "::after": Object {
          "content": "''",
        },
      },
      "display": "inline-block",
      "margin": "0 6",
    }
  }
>
  Current page
</li>
`;
